# server_ft2xx

./: .gitignore  CMakeLists.txt  README.md
about/: .$ServiseForFT2xx.drawio.bkp  ServiseForFT2xx.drawio  UserConnect.txt
source/: ModuleFT232RL.hpp  ModuleStreamCore.hpp  exceptions.cpp  exceptions.hpp  main.cpp  server.cpp  server.hpp  universalservercore.hpp  universalservermethods.cpp  universalservermethods.hpp  user.cpp
source/proto/: message.proto  server.proto
